# myworks

deneme123/: CMakeLists.txt  main.cpp
fotoğraf/: CMakeLists.txt  main.cpp
kamera/: CMakeLists.txt  main.cpp
medianfilter/: CMakeLists.txt  main.cpp
